<resources>
    <string name="app_name">EletricCar</string>
    <string name="title">Eletric Car</string>
    <string name="cars">Carros</string>
    <string name="favorites">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrido">Km percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="cd_calcular">Botão de calcular autonomia</string>
    <string name="cd_favorite">Botão de favorito</string>
    <string name="no_wifi">Ops, internet não disponível</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
    <string name="saved_cal">saved_cal</string>
</resources>