<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cars"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/favorites"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/tv_cars"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="24dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_favorites">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/eletric_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_preco"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/preco"
                app:layout_constraintStart_toStartOf="@id/iv_car"
                app:layout_constraintTop_toBottomOf="@id/iv_car" />

            <TextView
                android:id="@+id/tv_preco_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="RS $ 120.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/iv_car" />

            <TextView
                android:id="@+id/tv_bateria"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/bateria"
                app:layout_constraintStart_toStartOf="@id/iv_car"
                app:layout_constraintTop_toBottomOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_bateria_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="300 Kwh"
                app:layout_constraintStart_toEndOf="@id/tv_bateria"
                app:layout_constraintTop_toBottomOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_potencia"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/potencia"
                app:layout_constraintStart_toStartOf="@id/iv_car"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

            <TextView
                android:id="@+id/tv_potencia_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="RS $ 120.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_potencia"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

            <TextView
                android:id="@+id/tv_recarga"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/recarga"
                app:layout_constraintStart_toStartOf="@id/iv_car"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

            <TextView
                android:id="@+id/tv_recarga_value"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="RS $ 120.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_recarga"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/lv_informacoes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cv_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_calcular"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>