<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="24dp"
        app:cardBackgroundColor="@color/blue_clean"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="16dp"
                android:src="@drawable/ic_star"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/cd_favorite" />

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/eletric_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_preco"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/preco"
                app:layout_constraintStart_toStartOf="@id/iv_car"
                app:layout_constraintTop_toBottomOf="@id/iv_car" />

            <TextView
                android:id="@+id/tv_preco_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="RS $ 120.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/iv_car" />

            <TextView
                android:id="@+id/tv_bateria"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/bateria"
                app:layout_constraintStart_toStartOf="@id/iv_car"
                app:layout_constraintTop_toBottomOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_bateria_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="300 Kwh"
                app:layout_constraintStart_toEndOf="@id/tv_bateria"
                app:layout_constraintTop_toBottomOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_potencia"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/potencia"
                app:layout_constraintStart_toStartOf="@id/iv_car"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

            <TextView
                android:id="@+id/tv_potencia_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="RS $ 120.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_potencia"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

            <TextView
                android:id="@+id/tv_recarga"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/recarga"
                app:layout_constraintStart_toStartOf="@id/iv_car"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

            <TextView
                android:id="@+id/tv_recarga_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="RS $ 120.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_recarga"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>